Fixed swappable issue where a visibility transition (from where?) was hiding a swappable section way too early

--- a/src/app/components/utility-components/display-components/swappable/swappable.scss
+++ b/src/app/components/utility-components/display-components/swappable/swappable.scss
@@ -2,11 +2,11 @@ swappable-section-group {
     overflow: hidden;
     display: block;
 
-    .swappable-section-container {
+    .swappable-section-wrapper {
         overflow-x: hidden;
         display: inline;
 
-        .swappable-sections {
+        .swappable-section-container {
             display: flex;
             align-items: flex-start;
             transform: translateX(0px);
